tests/ui/borrowck/borrowck-if-else-uninitialized.stderr
error[E0381]: used binding `x` isn't initialized on any path leading to this point
  --> $DIR/borrowck-if-else-uninitialized.rs:6:20
   |
LL |     let x;
   |         - binding declared here but left uninitialized
...
LL |     } else {
   |      ------ if the `if` condition is `false` and this `else` arm is executed, `x` is not initialized
LL |         println!("{x}");
   |                    ^ `x` used here but it isn't initialized on any path leading to this point
   |
   = note: when checking initialization, the compiler describes possible control-flow paths without evaluating whether branch conditions can actually have the values shown
help: consider assigning a value
   |
LL |     let x = 42;
   |           ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
